<resources>
    <string name="app_name">ParkeeTransferWiseApps</string>
    <string name="select_recipient_type">Select Recipient Type</string>
    <string name="first_name_of_the_account_holder">First name of the account holder</string>
    <string name="last_name_of_the_account_holder">Last name of the account holder</string>
    <string name="recipients_bank_details">Recipients Bank Details</string>
    <string name="currency">Currency</string>
    <string name="add">Add</string>
    <string name="fee">Fee</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="title_detail_transfer">Detail Transfer</string>
    <string name="title_add_bank_account">Add your bank account</string>
    <string name="welcome_back">Welcome Back.</string>
    <string name="new_to_transferwise">New to TransferWise?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="remember_this_device">Remember this device</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="we_just_sent_you_an_sms">We just sent you an SMS</string>
    <string name="otp_message">To Log in, enter the security code we sent to *****8888</string>
    <string name="type_your_6_digit_security_code_here">Type your 6-digit security code here</string>
    <string name="done">DONE</string>
    <string name="i_didn_t_recieve_a_code">I didn\'t recieve a code</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="title_verification_otp">Verification OTP</string>
    <string name="you_send">You Send</string>
    <string name="recipient_gets">Recipient Gets</string>
    <string name="international">International</string>
    <string name="same_currency">Same Currency</string>
    <string name="text_continue">Continue</string>
    <string name="choose_recipient">Choose Recipient</string>
    <string name="what_s_the_reason_for_your_transfer">What\'s the reason for your transfer?</string>
    <string name="transfer_reason">Transfer Reason</string>
    <string name="your_transfer">Your Transfer</string>
    <string name="add_recipients">Add Recipients</string>
    <string name="recipients">Recipients</string>
    <string name="review_details_of_your_transfer">Review details of your transfer</string>
    <string name="transfer_details">Transfer Details</string>
    <string name="total_fees_included">Total fees (included)</string>
    <string name="amount_we_ll_convert">Amount we\'ll convert</string>
    <string name="guarantee_rate">Guarantee Rate</string>
    <string name="recipient_get">Recipient get</string>
    <string name="should_arrive">Should Arrive</string>
    <string name="recipient_details">Recipient Details</string>
    <string name="name">Name</string>
    <string name="error_must_be_filled">must be filled</string>
    <string name="error_email_wrong_format">wrong format</string>
    <string name="error_choose_currency">choose currency</string>
    <string name="error_wrong_otp">Wrong OTP</string>
</resources>