<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/international" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/same_currency" />

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/base16"
        android:weightSum="1">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTextSourceAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:hint="@string/you_send">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextSourceAmount"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTextSourceCurrency"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:hint="@string/currency">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextSourceCurrency"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_black"
                android:focusable="false"
                android:longClickable="false" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewFeeTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/base16"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="Fee : 20.000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/base16"
        android:weightSum="1">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:hint="@string/recipient_gets">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextTargetAmount"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:focusable="false"
                android:longClickable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTextTargetCurrency"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:hint="@string/currency">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextTargetCurrency"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_black"
                android:focusable="false"
                android:longClickable="false" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnContinueSendMoney"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_margin="@dimen/base16"
        android:text="@string/text_continue" />

</LinearLayout>