<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_white"
        app:title="@string/title_add_bank_account"
        app:titleTextColor="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutTextCurrency"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/base16"
                android:layout_marginTop="@dimen/base16"
                android:hint="@string/currency">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:focusable="false"
                    android:longClickable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/base16"
                android:layout_marginTop="@dimen/base16"
                android:text="@string/select_recipient_type" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginStart="@dimen/base16"
                android:layout_marginTop="@dimen/base8"
                android:layout_marginEnd="@dimen/base16"
                app:strokeColor="?attr/colorPrimary"
                app:strokeWidth="1dp">

                <Spinner
                    android:id="@+id/spinnerRecipientType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutTextFirstName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base16"
                android:hint="@string/first_name_of_the_account_holder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="62dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutTextLastName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/base16"
                android:hint="@string/last_name_of_the_account_holder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="62dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/base16"
                android:layout_marginTop="@dimen/base16"
                android:text="@string/recipients_bank_details" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginStart="@dimen/base16"
                android:layout_marginTop="@dimen/base8"
                android:layout_marginEnd="@dimen/base16"
                app:strokeColor="?attr/colorPrimary"
                app:strokeWidth="1dp">

                <Spinner
                    android:id="@+id/spinnerRecipientsBankDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAddRecipientField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base16"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <Button
                android:id="@+id/btnAddRecipients"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_margin="@dimen/base16"
                android:text="@string/add" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>