<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_white"
        app:title="@string/title_detail_transfer"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/textViewTitleDetailTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base16"
        android:paddingHorizontal="@dimen/base16"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="USD TO USD" />

    <TextView
        android:id="@+id/textViewArrivedTimeDetailTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base4"
        android:paddingHorizontal="@dimen/base16"
        tools:text="20-20-2020" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base16"
        android:paddingHorizontal="@dimen/base16"
        android:text="@string/fee"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewFeeDetailTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base4"
        android:paddingHorizontal="@dimen/base16"
        android:textSize="16sp"
        tools:text="20.00000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base16"
        android:paddingHorizontal="@dimen/base16"
        android:text="@string/exchange_rate"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewExchangeRateDetailTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base4"
        android:paddingHorizontal="@dimen/base16"
        android:textSize="16sp"
        tools:text="20.00000" />

</LinearLayout>